force-app/main/default/objects/Achievement__c/Achievement__c.object-meta.xml
<CustomObject>
    <description>Achievements including certifications and accomplishments.</description>
    <label>Achievement</label>
    <nameField>
        <label>Acheivement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>