force-app/main/default/objects/Achievement__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date field for documenting when the Achievement was completed.</description>
    <label>Completion Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>