force-app/main/default/objects/Achievement__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Order in which the user wants the achievements sorted</description>
    <inlineHelpText>Enter in the sort order for the achievement.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>