force-app/main/default/objects/Achievement__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description>Captures the venue and location text.</description>
    <inlineHelpText>Enter in the venue or org, and location</inlineHelpText>
    <label>Subtitle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>