force-app/main/default/objects/Achievement__c/recordTypes/Accomplishment.recordType-meta.xml
<RecordType>
    <fullName>Accomplishment</fullName>
    <active>true</active>
    <description>Accomplishment achieved.</description>
    <label>Accomplishment</label>
</RecordType>